# Basic-Cmake-Project

./: .gitignore  CMakeLists.txt  main.cpp
